<resources>
    <string name="app_name">WholeSaleMartDatabase</string>
    <string name="main_bottom_navigation_backup">Backup</string>
    <string name="main_bottom_navigation_search">Search</string>
    <string name="main_bottom_navigation_view">View</string>

    <string name="id">ID:</string>
    <string name="budget">Budget:</string>
    <string name="general_view">General view</string>
    <string name="request_compilation">Request compilation</string>
    <string name="phone_number">Phone number</string>
    <string name="surname">Surname</string>
    <string name="name">Name</string>
    <string name="budget_request">Budget</string>
    <string name="any">Any</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="choose_status">Choose status:</string>
    <string name="enter_the_data_for_the_request">Enter the data for the request:</string>
    <string name="search">Search</string>
    <string name="search_results">Search results</string>
    <string name="various_actions">Various actions</string>
    <string name="export_to_excel">Export to Excel</string>
    <string name="delete_database">Delete database</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_customer">Add new customer</string>
    <string name="name_req">name*</string>
    <string name="surname_req">surname*</string>
    <string name="phone_number_req">Phone number*</string>
    <string name="budget_req">Budget*</string>
    <string name="complete">complete</string>
    <string name="edit_customer">Edit customer</string>
</resources>
