<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.SearchFragment"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/family_member_view_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:title="@string/request_compilation"
        app:titleTextColor="@color/colorWhite"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_data_for_the_request"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_request_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:inputType="text"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/surname_request_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp"
            android:paddingVertical="5dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number_request_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="5dp"
            android:paddingHorizontal="10dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/budget_request">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/budget_request_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:textSize="16sp"
                    android:singleLine="true"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_status"
                android:fontFamily="@font/roboto"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"
                android:textColor="@color/colorPrimaryDark"/>

            <RadioGroup
                android:id="@+id/radio_group_request_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_status_gold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gold"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp"/>

                <RadioButton
                    android:id="@+id/radio_status_silver"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/silver"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"/>

                <RadioButton
                    android:id="@+id/radio_status_bronze"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bronze"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"/>

                <RadioButton
                    android:id="@+id/radio_status_any"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/any"
                    android:fontFamily="@font/roboto"
                    android:textSize="14sp"
                    android:layout_marginStart="7dp"/>

            </RadioGroup>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/search_request_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textColor="@color/colorWhite"
            android:theme="@style/FormButton"/>

    </LinearLayout>

</LinearLayout>